--- a/src/geonode-client/app/static/externals/ext/resources/css/xtheme-access.css
+++ b/src/geonode-client/app/static/externals/ext/resources/css/xtheme-access.css
@@ -22,7 +22,7 @@ body {
     background-color: #232d38;
     border-color:#556;
     color:#fff;
-    font:normal 14px tahoma, arial, helvetica, sans-serif;
+    font:normal 12px tahoma, arial, helvetica, sans-serif;
 }
 
 .x-mask-loading div {
@@ -72,7 +72,7 @@ body {
 }
 
 .loading-indicator {
-    font-size: 14px;
+    font-size: 12px;
     background-image: url(../images/access/grid/loading.gif);
 }
 
@@ -321,12 +321,12 @@ ul.x-tab-strip-bottom{
 }
 
 .x-form-item {
-    font:normal 15px tahoma, arial, helvetica, sans-serif;
+    font:normal 12px tahoma, arial, helvetica, sans-serif;
 }
 
 .x-form-invalid-msg {
     color:#c0272b;
-    font:normal 14px tahoma, arial, helvetica, sans-serif;
+    font:normal 12px tahoma, arial, helvetica, sans-serif;
     background-image:url(../images/default/shared/warning.gif);
 }
 
@@ -339,11 +339,11 @@ ul.x-tab-strip-bottom{
 }
 
 .x-small-editor .x-form-field {
-    font:normal 14px arial, tahoma, helvetica, sans-serif;
+    font:normal 12px arial, tahoma, helvetica, sans-serif;
 }
 
 .ext-safari .x-small-editor .x-form-field {
-    font:normal 15px arial, tahoma, helvetica, sans-serif;
+    font:normal 12px arial, tahoma, helvetica, sans-serif;
 }
 
 .x-form-invalid-icon {
@@ -358,15 +358,15 @@ ul.x-tab-strip-bottom{
 }
 
 .x-fieldset legend {
-    font:bold 14px tahoma, arial, helvetica, sans-serif;
+    font:bold 12px tahoma, arial, helvetica, sans-serif;
     color:#fff;
 }
 .x-btn {
-	font:normal 14px tahoma, verdana, helvetica;
+	font:normal 12px tahoma, verdana, helvetica;
 }
 
 .x-btn button {
-    font:normal 14px arial,tahoma,verdana,helvetica;
+    font:normal 12px arial,tahoma,verdana,helvetica;
     color:#fffffa;
     padding-left:6px !important;
     padding-right:6px !important;
@@ -498,7 +498,7 @@ ul.x-tab-strip-bottom{
 }
 
 .x-toolbar td,.x-toolbar span,.x-toolbar input,.x-toolbar div,.x-toolbar select,.x-toolbar label{
-    font:normal 14px arial,tahoma, helvetica, sans-serif;
+    font:normal 12px arial,tahoma, helvetica, sans-serif;
 }
 
 .x-toolbar .x-item-disabled {
@@ -547,7 +547,7 @@ ul.x-tab-strip-bottom{
 }
 
 .x-toolbar .x-btn-mc em.x-btn-split {
-    padding-right:14px;
+    padding-right:12px;
 }
 
 .x-tbar-page-first{
@@ -652,7 +652,7 @@ ul.x-tab-strip-bottom{
 }
 
 .x-grid3-hd-row td, .x-grid3-row td, .x-grid3-summary-row td{
-	font:normal 14px arial, tahoma, helvetica, sans-serif;
+	font:normal 12px arial, tahoma, helvetica, sans-serif;
 }
 
 .x-grid3-hd-row td {
@@ -667,7 +667,7 @@ ul.x-tab-strip-bottom{
 
 .x-grid3-row {
     border:0 none;
-    border-bottom:1px solid #111;
+    border-bottom:1px solid #121;
     border-right:1px solid #1a1a1c;
 }
 
@@ -795,7 +795,7 @@ td.x-grid3-hd-over .x-grid3-hd-inner, td.sort-desc .x-grid3-hd-inner, td.sort-as
 }
 
 .x-grid3-topbar, .x-grid3-bottombar{
-	font:normal 14px arial, tahoma, helvetica, sans-serif;
+	font:normal 12px arial, tahoma, helvetica, sans-serif;
 }
 
 .x-grid3-bottombar .x-toolbar{
@@ -890,7 +890,7 @@ td.x-grid3-hd-over .x-grid3-hd-inner, td.sort-desc .x-grid3-hd-inner, td.sort-as
     background-image:url(../images/access/grid/group-collapse.gif);
     background-position:3px 6px;
     color:#ffd;
-    font:bold 14px tahoma, arial, helvetica, sans-serif;
+    font:bold 12px tahoma, arial, helvetica, sans-serif;
 }
 
 .x-grid-group-collapsed .x-grid-group-hd div.x-grid-group-title {
@@ -911,7 +911,7 @@ td.x-grid3-hd-over .x-grid3-hd-inner, td.sort-desc .x-grid3-hd-inner, td.sort-as
 
 .x-grid-empty {
     color:gray;
-    font:normal 14px tahoma, arial, helvetica, sans-serif;
+    font:normal 12px tahoma, arial, helvetica, sans-serif;
 }
 
 .x-grid-with-col-lines .x-grid3-row td.x-grid3-cell {
@@ -926,10 +926,10 @@ td.x-grid3-hd-over .x-grid3-hd-inner, td.sort-desc .x-grid3-hd-inner, td.sort-as
 	border-top-color:#a3bae9;
 }
 .x-dd-drag-ghost{
-	color:#000;
-	font: normal 14px arial, helvetica, sans-serif;
+    color:#000;
+    font: normal 12px arial, helvetica, sans-serif;
     border-color: #ddd #bbb #bbb #ddd;
-	background-color:#fff;
+    background-color:#fff;
 }
 
 .x-dd-drop-nodrop .x-dd-drop-icon{
@@ -974,8 +974,8 @@ td.x-grid3-hd-over .x-grid3-hd-inner, td.sort-desc .x-grid3-hd-inner, td.sort-as
 }
 
 .ext-ie .x-tree-node-el input {
-    width:14px;
-    height:14px;
+    width:12px;
+    height:12px;
 }
 
 .x-tree-lines .x-tree-elbow{
@@ -1040,7 +1040,7 @@ td.x-grid3-hd-over .x-grid3-hd-inner, td.sort-desc .x-grid3-hd-inner, td.sort-as
 
 .x-tree-node{
 	color:#000;
-	font: normal 14px arial, tahoma, helvetica, sans-serif;
+	font: normal 12px arial, tahoma, helvetica, sans-serif;
 }
 
 .x-tree-node a, .x-dd-drag-ghost a{
@@ -1115,7 +1115,7 @@ td.x-grid3-hd-over .x-grid3-hd-inner, td.sort-desc .x-grid3-hd-inner, td.sort-as
 .x-date-middle,.x-date-left,.x-date-right {
 	background-image: url(../images/access/shared/hd-sprite.gif);
 	color:#fff;
-	font:bold 14px "sans serif", tahoma, verdana, helvetica;
+	font:bold 12px "sans serif", tahoma, verdana, helvetica;
 }
 
 .x-date-middle .x-btn .x-btn-text {
@@ -1138,16 +1138,16 @@ td.x-grid3-hd-over .x-grid3-hd-inner, td.sort-desc .x-grid3-hd-inner, td.sort-as
     background-color:#363d4a;
     background-image:url(../images/access/toolbar/bg.gif);
 	border-bottom-color:#535b5c;
-    font:normal 13px arial, helvetica,tahoma,sans-serif;
+    font:normal 12px arial, helvetica,tahoma,sans-serif;
 	color:#fff;
 }
 
 .x-date-inner td {
-    border-color:#112;
+    border-color:#122;
 }
 
 .x-date-inner a {
-    font:normal 14px arial, helvetica,tahoma,sans-serif;
+    font:normal 12px arial, helvetica,tahoma,sans-serif;
     color:#fff;
     padding:2px 7px 1px 3px; /* Structure to account for larger, bolder fonts in Access theme. */
 }
@@ -1158,8 +1158,8 @@ td.x-grid3-hd-over .x-grid3-hd-inner, td.sort-desc .x-grid3-hd-inner, td.sort-as
 
 .x-date-inner .x-date-selected a{
     background-color:#e5872c;
-	background-image:none;
-	border-color:#864900;
+    background-image:none;
+    border-color:#864900;
     padding:1px 6px 1px 2px; /* Structure to account for larger, bolder fonts in Access theme. */
 }
 
@@ -1196,7 +1196,7 @@ td.x-grid3-hd-over .x-grid3-hd-inner, td.sort-desc .x-grid3-hd-inner, td.sort-as
 }
 
 .x-date-mmenu .x-menu-item {
-	font-size:13px;
+	font-size:12px;
 	color:#000;
 }
 
@@ -1205,14 +1205,14 @@ td.x-grid3-hd-over .x-grid3-hd-inner, td.sort-desc .x-grid3-hd-inner, td.sort-as
 }
 
 .x-date-mp td {
-	font:normal 14px arial, helvetica,tahoma,sans-serif;
+	font:normal 12px arial, helvetica,tahoma,sans-serif;
 }
 
 .x-date-mp-btns button {
 	background-color:#083772;
 	color:#fff;
 	border-color: #3366cc #000055 #000055 #3366cc;
-	font:normal 14px arial, helvetica,tahoma,sans-serif;
+	font:normal 12px arial, helvetica,tahoma,sans-serif;
 }
 
 .x-date-mp-btns {
@@ -1231,7 +1231,7 @@ td.x-date-mp-month a,td.x-date-mp-year a {
 td.x-date-mp-month a:hover,td.x-date-mp-year a:hover {
 	color:#fff;
 	background-color: #7e5530;
-}
+2}
 
 td.x-date-mp-sel a {
     background-color: #e5872c;
@@ -1255,7 +1255,7 @@ td.x-date-mp-sep {
 }
 
 .x-tip .x-tip-mc {
-    font: normal 14px tahoma,arial,helvetica,sans-serif;
+    font: normal 12px tahoma,arial,helvetica,sans-serif;
 }
 .x-tip .x-tip-ml {
 	background-color: #fff;
@@ -1267,14 +1267,14 @@ td.x-date-mp-sep {
 }
 
 .x-tip .x-tip-body {
-    font: normal 14px tahoma,arial,helvetica,sans-serif;
+    font: normal 12px tahoma,arial,helvetica,sans-serif;
     color:#000;
 }
 
 .x-form-invalid-tip .x-tip-tc, .x-form-invalid-tip .x-tip-tl, .x-form-invalid-tip .x-tip-tr, .x-form-invalid-tip .x-tip-bc,
 .x-form-invalid-tip .x-tip-bl, .x-form-invalid-tip .x-tip-br, .x-form-invalid-tip .x-tip-ml, .x-form-invalid-tip .x-tip-mr
 {
-	background-image: url(../images/default/form/error-tip-corners.gif);
+    background-image: url(../images/default/form/error-tip-corners.gif);
 }
 
 .x-form-invalid-tip .x-tip-body {
@@ -1285,48 +1285,48 @@ td.x-date-mp-sep {
     background-image:url(../images/access/qtip/tip-anchor-sprite.gif);
 }
 .x-menu {
-	border-color:#222;
+    border-color:#222;
     background-color:#414551;
-	background-image:url(../images/access/menu/menu.gif);
+    background-image:url(../images/access/menu/menu.gif);
 }
 
 .x-menu-nosep {
-	background-image:none;
+    background-image:none;
 }
 
 .x-menu-list-item{
-	font:normal 14px tahoma,arial, sans-serif;
+    font:normal 12px tahoma,arial, sans-serif;
 }
 
 .x-menu-item-arrow{
-	background-image:url(../images/access/menu/menu-parent.gif);
+    background-image:url(../images/access/menu/menu-parent.gif);
 }
 
 .x-menu-sep {
     background-color:#223;
-	border-bottom-color:#666;
+    border-bottom-color:#666;
 }
 
 a.x-menu-item {
-	color:#fffff6;
+    color:#fffff6;
 }
 
 .x-menu-item-active {
-	background-color: #f09134;
-	background-image: none;
+    background-color: #f09134;
+    background-image: none;
     border-color:#b36427;
 }
 
 .x-menu-item-active a.x-menu-item {
-	border-color:#b36427;
+    border-color:#b36427;
 }
 
 .x-menu-check-item .x-menu-item-icon{
-	background-image:url(../images/default/menu/unchecked.gif);
+    background-image:url(../images/default/menu/unchecked.gif);
 }
 
 .x-menu-item-checked .x-menu-item-icon{
-	background-image:url(../images/default/menu/checked.gif);
+    background-image:url(../images/default/menu/checked.gif);
 }
 
 .x-menu-item-checked .x-menu-group-item .x-menu-item-icon{
@@ -1338,7 +1338,7 @@ a.x-menu-item {
 }
 
 .x-menu-plain {
-	background-color:#fff !important;
+    background-color:#fff !important;
 }
 
 .x-menu .x-date-picker{
@@ -1358,77 +1358,77 @@ a.x-menu-item {
     background-image:url(../images/default/layout/mini-bottom.gif);
 }
 .x-box-tl {
-	background-image: url(../images/default/box/corners.gif);
+    background-image: url(../images/default/box/corners.gif);
 }
 
 .x-box-tc {
-	background-image: url(../images/default/box/tb.gif);
+    background-image: url(../images/default/box/tb.gif);
 }
 
 .x-box-tr {
-	background-image: url(../images/default/box/corners.gif);
+    background-image: url(../images/default/box/corners.gif);
 }
 
 .x-box-ml {
-	background-image: url(../images/default/box/l.gif);
+    background-image: url(../images/default/box/l.gif);
 }
 
 .x-box-mc {
-	background-color: #eee;
+    background-color: #eee;
     background-image: url(../images/default/box/tb.gif);
-	font-family: "Myriad Pro","Myriad Web","Tahoma","Helvetica","Arial",sans-serif;
-	color: #393939;
-	font-size: 15px;
+    font-family: "Myriad Pro","Myriad Web","Tahoma","Helvetica","Arial",sans-serif;
+    color: #393939;
+    font-size: 12px;
 }
 
 .x-box-mc h3 {
-	font-size: 18px;
-	font-weight: bold;
+    font-size: 12px;
+    font-weight: bold;
 }
 
 .x-box-mr {
-	background-image: url(../images/default/box/r.gif);
+    background-image: url(../images/default/box/r.gif);
 }
 
 .x-box-bl {
-	background-image: url(../images/default/box/corners.gif);
+    background-image: url(../images/default/box/corners.gif);
 }
 
 .x-box-bc {
-	background-image: url(../images/default/box/tb.gif);
+    background-image: url(../images/default/box/tb.gif);
 }
 
 .x-box-br {
-	background-image: url(../images/default/box/corners.gif);
+    background-image: url(../images/default/box/corners.gif);
 }
 
 .x-box-blue .x-box-bl, .x-box-blue .x-box-br, .x-box-blue .x-box-tl, .x-box-blue .x-box-tr {
-	background-image: url(../images/default/box/corners-blue.gif);
+    background-image: url(../images/default/box/corners-blue.gif);
 }
 
 .x-box-blue .x-box-bc, .x-box-blue .x-box-mc, .x-box-blue .x-box-tc {
-	background-image: url(../images/default/box/tb-blue.gif);
+    background-image: url(../images/default/box/tb-blue.gif);
 }
 
 .x-box-blue .x-box-mc {
-	background-color: #c3daf9;
+    background-color: #c3daf9;
 }
 
 .x-box-blue .x-box-mc h3 {
-	color: #17385b;
+    color: #17385b;
 }
 
 .x-box-blue .x-box-ml {
-	background-image: url(../images/default/box/l-blue.gif);
+    background-image: url(../images/default/box/l-blue.gif);
 }
 
 .x-box-blue .x-box-mr {
-	background-image: url(../images/default/box/r-blue.gif);
+    background-image: url(../images/default/box/r-blue.gif);
 }
 .x-combo-list {
     border:2px solid #232732;
     background-color:#555566;
-    font:normal 15px tahoma, arial, helvetica, sans-serif;
+    font:normal 12px tahoma, arial, helvetica, sans-serif;
 }
 
 .x-combo-list-inner {
@@ -1436,7 +1436,7 @@ a.x-menu-item {
 }
 
 .x-combo-list-hd {
-    font:bold 14px tahoma, arial, helvetica, sans-serif;
+    font:bold 12px tahoma, arial, helvetica, sans-serif;
     color:#fff;
     background-image: url(../images/default/layout/panel-title-light-bg.gif);
     border-bottom-color:#98c0f4;
@@ -1460,17 +1460,17 @@ a.x-menu-item {
 }
 
 .x-combo-list-small {
-    font:normal 14px tahoma, arial, helvetica, sans-serif;
+    font:normal 12px tahoma, arial, helvetica, sans-serif;
 }
 .x-panel {
     border-color: #18181a;
-    font-size: 14px;
+    font-size: 12px;
 }
 
 .x-panel-header {
     color:#fff;
     font-weight:bold; 
-    font-size: 14px;
+    font-size: 12px;
     font-family: tahoma,arial,verdana,sans-serif;
     border-color:#18181a;
     background-image: url(../images/access/panel/white-top-bottom.gif);
@@ -1502,7 +1502,7 @@ a.x-menu-item {
 
 .x-panel-tl .x-panel-header {
     color:#fff;
-    font:bold 14px tahoma,arial,verdana,sans-serif;
+    font:bold 12px tahoma,arial,verdana,sans-serif;
 }
 
 .x-panel-tc {
@@ -1515,11 +1515,11 @@ a.x-menu-item {
 }
 
 .x-panel-bc {
-	background-image: url(../images/access/panel/top-bottom.gif);
+    background-image: url(../images/access/panel/top-bottom.gif);
 }
 
 .x-panel-mc {
-    font: normal 14px tahoma,arial,helvetica,sans-serif;
+    font: normal 12px tahoma,arial,helvetica,sans-serif;
     background-color:#3f4757;
 }
 
@@ -1528,7 +1528,7 @@ a.x-menu-item {
 }
 
 .x-panel-mr {
-	background-image: url(../images/access/panel/left-right.gif);
+    background-image: url(../images/access/panel/left-right.gif);
 }
 
 .x-tool {
@@ -1548,7 +1548,7 @@ a.x-menu-item {
 }
 
 .x-panel-fbar td,.x-panel-fbar span,.x-panel-fbar input,.x-panel-fbar div,.x-panel-fbar select,.x-panel-fbar label{
-    font:normal 14px arial,tahoma, helvetica, sans-serif;
+    font:normal 12px arial,tahoma, helvetica, sans-serif;
 }
 .x-window-proxy {
     background-color:#1f2833;
@@ -1557,45 +1557,45 @@ a.x-menu-item {
 
 .x-window-tl .x-window-header {
     color:#fff;
-	font:bold 14px tahoma,arial,verdana,sans-serif;
+    font:bold 12px tahoma,arial,verdana,sans-serif;
 }
 
 .x-window-tc {
-	background-image: url(../images/access/window/top-bottom.png);
+    background-image: url(../images/access/window/top-bottom.png);
 }
 
 .x-window-tl {
-	background-image: url(../images/access/window/left-corners.png);
+    background-image: url(../images/access/window/left-corners.png);
 }
 
 .x-window-tr {
-	background-image: url(../images/access/window/right-corners.png);
+    background-image: url(../images/access/window/right-corners.png);
 }
 
 .x-window-bc {
-	background-image: url(../images/access/window/top-bottom.png);
+    background-image: url(../images/access/window/top-bottom.png);
 }
 
 .x-window-bl {
-	background-image: url(../images/access/window/left-corners.png);
+    background-image: url(../images/access/window/left-corners.png);
 }
 
 .x-window-br {
-	background-image: url(../images/access/window/right-corners.png);
+    background-image: url(../images/access/window/right-corners.png);
 }
 
 .x-window-mc {
     border-color:#18181a;
-    font: normal 14px tahoma,arial,helvetica,sans-serif;
+    font: normal 12px tahoma,arial,helvetica,sans-serif;
     background-color:#1f2833;
 }
 
 .x-window-ml {
-	background-image: url(../images/access/window/left-right.png);
+    background-image: url(../images/access/window/left-right.png);
 }
 
 .x-window-mr {
-	background-image: url(../images/access/window/left-right.png);
+    background-image: url(../images/access/window/left-right.png);
 }
 
 .x-window-maximized .x-window-tc {
@@ -1664,14 +1664,14 @@ body.x-body-masked .x-window-plain .x-window-mc {
 }
 
 .x-accordion-hd {
-	color:#fff;
+    color:#fff;
     font-weight:normal;
     background-image: url(../images/access/panel/light-hd.gif);
 }
 
 .x-layout-collapsed{
     background-color:#323845;
-	border-color:#1a1a1c;
+    border-color:#1a1a1c;
 }
 
 .x-layout-collapsed-over{
@@ -1728,7 +1728,7 @@ body.x-body-masked .x-window-plain .x-window-mc {
 }
 
 .x-progress-text {
-    font-size:14px;
+    font-size:12px;
     font-weight:bold;
     color:#fff;
     padding: 0 5px !important; /* structural override for Accessibility Theme */
@@ -1740,13 +1740,13 @@ body.x-body-masked .x-window-plain .x-window-mc {
 }
 .x-list-header{
     background-color:#393d4e;
-	background-image:url(../images/access/toolbar/bg.gif);
-	background-position:0 top;
+    background-image:url(../images/access/toolbar/bg.gif);
+    background-position:0 top;
 }
 
 .x-list-header-inner div em {
     border-left-color:#667;
-    font:normal 14px arial, tahoma, helvetica, sans-serif;
+    font:normal 12px arial, tahoma, helvetica, sans-serif;
     line-height: 14px;
 }
 
@@ -1755,7 +1755,7 @@ body.x-body-masked .x-window-plain .x-window-mc {
 }
 
 .x-list-body dt em {
-    font:normal 14px arial, tahoma, helvetica, sans-serif;
+    font:normal 12px arial, tahoma, helvetica, sans-serif;
 }
 
 .x-list-over {
@@ -1792,11 +1792,11 @@ body.x-body-masked .x-window-plain .x-window-mc {
 }
 .x-window-dlg .ext-mb-text,
 .x-window-dlg .x-window-header-text {
-    font-size:15px;
+    font-size:12px;
 }
 
 .x-window-dlg .ext-mb-textarea {
-    font:normal 15px tahoma,arial,helvetica,sans-serif;
+    font:normal 10px tahoma,arial,helvetica,sans-serif;
 }
 
 .x-window-dlg .x-msg-box-wait {
